# claudesque-universal-suite

./: CORE_ENGINE_ARCHITECTURE.md  DATA_MODEL_SPEC.md  INTEROP_SPEC.md  PROJECT_STRUCTURE.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
.lovable/: plan.md
apps/liberty-design/: index.html  package.json
apps/liberty-design/src/: main.tsx
apps/liberty-docs/: index.html  package.json  tsconfig.json
apps/liberty-docs/src/: main.tsx
apps/liberty-hub/: index.html  package.json
apps/liberty-hub/src/: main.tsx
apps/liberty-impress/: index.html  package.json
apps/liberty-impress/src/: main.tsx
apps/liberty-sheets/: index.html  package.json
apps/liberty-sheets/src/: main.tsx
apps/liberty-voice/: index.html  package.json
apps/liberty-voice/src/: main.tsx
bridge/rust/: Cargo.toml  build.rs
bridge/rust/src/: lib.rs
docs/architecture/: UI_PRESERVATION.md
docs/reference/: UI_SPEC.md
native/: CMakeLists.txt
native/compiler-engine/: CMakeLists.txt
native/compiler-engine/include/: compiler_engine.h
native/compiler-engine/src/: compiler_engine.cpp
native/design-engine/: CMakeLists.txt
native/design-engine/include/: design_engine.h
native/design-engine/src/: design_engine.cpp
native/docs-engine/: CMakeLists.txt
native/docs-engine/include/: docs_engine.h
native/docs-engine/src/: docs_engine.cpp
native/formula-engine/: CMakeLists.txt
native/formula-engine/include/: formula_engine.h
native/formula-engine/src/: formula_engine.cpp
native/impress-engine/: CMakeLists.txt
native/impress-engine/include/: impress_engine.h
native/impress-engine/src/: impress_engine.cpp
native/kernel/: CMakeLists.txt
native/kernel/include/: kernel.h
native/kernel/src/: kernel.cpp
native/layout-engine/: CMakeLists.txt
native/layout-engine/include/: layout_engine.h
native/layout-engine/src/: layout_engine.cpp
native/pdf-engine/: CMakeLists.txt
native/pdf-engine/include/: pdf_engine.h
native/pdf-engine/src/: pdf_engine.cpp
native/sheets-engine/: CMakeLists.txt
native/sheets-engine/include/: sheets_engine.h
native/sheets-engine/src/: sheets_engine.cpp
native/text-engine/: CMakeLists.txt
native/text-engine/include/: text_engine.h
native/text-engine/src/: text_engine.cpp
native/voice-engine/: CMakeLists.txt
native/voice-engine/include/: voice_engine.h
native/voice-engine/src/: voice_engine.cpp
public/: manifest.json  office-suite.js
src/: routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/apps/: PdfApp.tsx  PresentApp.tsx  SheetApp.tsx  WriteApp.tsx
src/components/ribbon/: Ribbon.tsx  RibbonButton.tsx  RibbonGroup.tsx  RibbonTab.tsx
src/components/shared/: FileDialog.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
src/hooks/: useFileManager.ts  useKeyboard.ts
src/lib/: ensureScript.ts
src/liberty/: LibertyStudio.tsx  ThemeContext.tsx  theme.css
src/liberty/apps/: LibertyChatApp.tsx  LibertyImpressApp.tsx  LibertyPdfApp.tsx  LibertySheetApp.tsx  LibertyWriteApp.tsx
src/liberty/ribbon/: LibertyRibbon.tsx  LibertyRibbonButton.tsx  LibertyRibbonGroup.tsx  Ribbon.tsx  RibbonButton.tsx  RibbonGroup.tsx
src/liberty/settings/: BackstageSettings.tsx
src/liberty/shell/: AppSidebar.tsx  AppSwitcher.tsx  LibertyFileDialog.tsx  LibertyStatusBar.tsx  RightPanel.tsx  StatusBar.tsx  TitleBar.tsx
src/octopus/: OctopusStudio.tsx  octopus.css
src/office/: OfficeSuite.tsx  host.css  markup.html  office.css
src/routes/: index.tsx  liberty-docs.tsx  liberty.tsx
src/store/: useAppStore.ts  useDocumentStore.ts
