[package]
name = "liberty-desktop"
version = "2.0.4"
description = "Liberty Studio Desktop Shell"
authors = ["Liberty Authors"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
